--- a/stage-cnam/src/components/leMetier/leMetier.css
+++ b/stage-cnam/src/components/leMetier/leMetier.css
@@ -1,3 +1,21 @@
 .le-metier {
 
 }
+
+.heroCorps {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.div1, .div2, .div3 {
+    border: 3px solid black;
+    height: 400px;
+    width: 250px;
+    border-radius: 10px;
+}
+
+p {
+    padding: 0 40px 0 40px;
+}
