--- a/stage-cnam/src/components/lbi/lbi.css
+++ b/stage-cnam/src/components/lbi/lbi.css
@@ -13,3 +13,8 @@
     display: flex;
   justify-content: center;
  }
+
+ .slick-prev:before, .slick-next:before {
+  color: black!important;
+  font-size: 20px;
+}
