--- a/stage-cnam/src/components/leMetier/leMetier.css
+++ b/stage-cnam/src/components/leMetier/leMetier.css
@@ -1,21 +1,52 @@
-.le-metier {
-
+.h2-metier {
+    padding: 40px 0 20px 40px;
 }
 
-.heroCorps {
+.h1-metier {
+    margin-top: 40px;
+    padding-left: 40px;
+    font-size: 3rem;
+}
+
+.p-metier {
+    padding: 0 100px 0 40px;
+    font-size: 1.3rem;
+}
+
+.side-menu {
     display: flex;
-    justify-content: space-around;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    flex-direction: column;
+    justify-content: space-between;
+   /* border: 3px solid black; */
+    height: 550px;
+    width: 380px;
+    border-radius: 2px;
+    margin-left: 50px;
+    padding: 30px 10px 30px 20px;
+    font-size: 1.3rem;
+    background-color: rgb(236, 231, 231);
+    position: fixed; /* Fixed/sticky position */
+    top: 150px; /* Place the button at the bottom of the page */
+    left: 30px; /* Place the button 30px from the right */
+    z-index: 99;
 }
 
-.div1, .div2, .div3 {
-    border: 3px solid black;
-    height: 400px;
-    width: 250px;
-    border-radius: 10px;
+.aaa {
+    margin-bottom: 20px;
+    font-weight: bold;
 }
 
-p {
-    padding: 0 40px 0 40px;
+.aaa:hover {
+    color: rgb(143, 135, 135);
+    cursor: pointer;
+}
+
+.right-side {
+    margin-left: 32%;
+    margin-bottom: 200px;
+}
+
+.span-source {
+   font-style: italic;
+   font-weight: 200;
 }
