--- a/stage-cnam/src/components/leMetier/leMetier.css
+++ b/stage-cnam/src/components/leMetier/leMetier.css
@@ -13,21 +13,23 @@
     font-size: 1.2rem;
 }
 
+.div-metier {
+    display: flex;
+    width: 100vW;
+}
+
 .side-menu {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
    /* border: 3px solid black; */
-    height: 70%;
-    width: 24%;
+    height: 700px;
+    width: 300px;
     border-radius: 8px;
     margin-left: 50px;
     padding: 30px 10px 30px 20px;
     font-size: 1.2rem;
     background-color: #333;
-    position: fixed;
-    top: 150px;
-    z-index: 99;
     box-shadow: -7px 7px 2px 0px rgba(0,0,0,0.1);
 }
 
@@ -43,8 +45,7 @@
 }
 
 .right-side {
-    margin-left: 32%;
-    margin-bottom: 200px;
+    margin: 50px 200px 50px 200px;
 }
 
 .span-source {
